--- a/Chime Timer/res/layout/config_view.xml
+++ b/Chime Timer/res/layout/config_view.xml
@@ -7,30 +7,92 @@
               
     <Spinner android:id="@+id/timer_choice"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:entries="@array/timer_choices" />
-                    
-    <EditText android:id="@+id/name"
-            android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
             
-    <org.hermit.android.widgets.TimeoutPicker android:id="@+id/pre_time"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-            
-    <Spinner android:id="@+id/start_bell"
+    <TableLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:entries="@array/bell_choices" />
+            android:stretchColumns="*">
             
-    <org.hermit.android.widgets.TimeoutPicker android:id="@+id/run_time"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-            
-    <Spinner android:id="@+id/finish_bell"
+        <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size"
+                    android:text="@string/lab_name" />
+            <EditText android:id="@+id/name"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size">
+                <requestFocus />
+            </EditText>
+        </TableRow>
+        
+        <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size"
+                    android:text="@string/lab_pre" />
+            <Button android:id="@+id/but_pre_time"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size"
+                    android:typeface="monospace"/>
+        </TableRow>
+        
+        <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size"
+                    android:text="@string/lab_start" />
+            <Spinner android:id="@+id/start_bell"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content" />
+        </TableRow>
+        
+        <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size"
+                    android:text="@string/lab_time" />
+            <Button android:id="@+id/but_run_time"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size"
+                    android:typeface="monospace" />
+        </TableRow>
+                
+        <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size"
+                    android:text="@string/lab_finish" />
+            <Spinner android:id="@+id/finish_bell"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content" />
+        </TableRow>
+        
+    </TableLayout>
+    
+    <Button android:id="@+id/but_done"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:entries="@array/bell_choices" />
-
+            android:textSize="@dimen/text_size"
+            android:text="@string/but_done" />
+            
 </LinearLayout>
 
